--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Conputer Literacy</title>
+    <title>Computer Literacy</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -47,7 +47,7 @@
         </div>
       -->
       </div>
-
+      <!--
       <div class="contact-form">
         <h3 class="section-title">お問い合わせ</h3>
         <p>メールアドレス（必須）</p>
@@ -65,10 +65,12 @@
         
         
       </div>
+      -->
     </main>
 
     <footer>
-      <div class="footer-logo">Progate</div>
+      <div class="footer-logo">Computer Literacy</div>
+      <!--
       <div class="footer-list">
         <ul>
           <li>会社概要</li>
@@ -76,6 +78,7 @@
           <li>お問い合わせ</li>
         </ul>
       </div>
+      -->
     </footer>
   </body>
 </html>
